[package]
name = "llvm-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
packed_struct = "0.10.1"
unicode-segmentation = "1.10.1"
token-macro = { path = "./token-macro" }
string-interner = "0.14.0"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_env_logger = "0.5.0"
log = "0.4.22"

[profile.release]
debug = 1
